upload new Change

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-sm-6">
-            <p class="text-uppercase fw-bold">copyright 2021 all right reserved</p>
+            <p class="text-uppercase fw-bold">copyright &copy; 2022 all right reserved</p>
           </div>
           <div class="col-lg-4 col-sm-6">
             <p class="fw-bold text-lg-center text-md-end text-uppercase">Thanks for patience</p>
@@ -446,16 +446,16 @@
           <div class="col-lg-4">
             <ul class="text-lg-center">
               <li>
-                <a href="#">
+                <a href="https://www.facebook.com/anamostafa.misse">
                   <i class="fab fa-facebook px-2"></i>
                 </a>
-                <a href="#">
+                <a href="https://github.com/mustafa2036">
                   <i class="fab fa-github px-2"></i>
                 </a>
-                <a href="#">
-                  <i class="fab fa-google px-2"></i>
+                <a href="https://www.linkedin.com/in/mostafa-misse-a35199225/">
+                  <i class="fab fa-linkedin px-2"></i>
                 </a>
-                <a href="#">
+                <a href="#home">
                   <i class="fab fa-dribbble px-2"></i>
                 </a>
               </li>
