change file in index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light py-3">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light py-4">
         <div class="container">
           <a class="navbar-brand text-uppercase fw-bold" href="#home">Portoflio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -188,16 +188,16 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Fakir_Template</h3>
-              <p class="mb-4 fw-bold">Using HTML - Css - js</p>
-              <a href="https://mustafa2036.github.io/Fakir_Website/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Recipe_Api</h3>
+              <p class="mb-4 fw-bold">Using React - Bootstrap - API - UseHooks</p>
+              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Recipe_Api</h3>
-              <p class="mb-4 fw-bold">Using React - Bootstrap - API - UseHooks</p>
-              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Zay</h3>
+              <p class="mb-4 fw-bold">Using React - Scss - Bootstrap</p>
+              <a href="https://mustafa2036.github.io/ZAY/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -209,21 +209,21 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">DevFolio_Template</h3>
-              <p class="mb-4 fw-bold">Using HTML - Css - js</p>
-              <a href="https://mustafa2036.github.io/DevFolio_Website/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Weather_App</h3>
+              <p class="mb-4 fw-bold">Using HTML - Scss - js</p>
+              <a href="https://mustafa2036.github.io/Weather_app_1/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Simone_Template</h3>
-              <p class="mb-4 fw-bold">Using HTML - Scss - BootStrap - js</p>
-              <a href="https://mustafa2036.github.io/Simone_Website_2/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Shop_Api</h3>
+              <p class="mb-4 fw-bold">Using React - Scss - BootStrap - UseHooks</p>
+              <a href="https://mustafa2036.github.io/shopAPi_2/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Template_Moviesdb_APi</h3>
+              <h3 class="text-capitalize fw-bold mb-4">Moviesdb_APi</h3>
               <p class="mb-4 fw-bold">Using HTML - Css - BootStrap - js - Fetch - Api</p>
               <a href="https://mustafa2036.github.io/API-Exam/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
             </div>
