upload new changes

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="col-lg-3 col-md-6 d-flex justify-content-center align-items-center">
               <div class="counter-num">
-                <h2 class="text-center counter-nums fw-bold" data-goal="25">0</h2>
+                <h2 class="text-center counter-nums fw-bold" data-goal="32">0</h2>
                 <p class="fw-bold">Projects Done</p>
               </div>
             </div>
@@ -158,7 +158,7 @@
             </div>
             <div class="col-lg-3 col-md-6 d-flex justify-content-center align-items-center">
               <div class="counter-num">
-                <h2 class="text-center counter-nums fw-bold" data-goal="100">0</h2>
+                <h2 class="text-center counter-nums fw-bold" data-goal="400">0</h2>
                 <p class="fw-bold">Followers</p>
               </div>
             </div>
@@ -177,65 +177,72 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Curds_Projects</h3>
-              <p class="mb-4 fw-bold">Using HTML - Scss - js - Bootstrap - localStorage</p>
-              <a href="https://mustafa2036.github.io/CURDS/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Weather_App</h3>
+              <p class="mb-4 fw-bold px-3">it is an app to forecast the weather for 3 days by 
+                JavaScript with API used (Weather API)</p>
+              <a href="https://mustafa2036.github.io/ReactWeather/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
               <h3 class="text-capitalize fw-bold mb-4">Movies_Api</h3>
-              <p class="mb-4 fw-bold">Using React - Bootstrap - API - UseHooks</p>
-              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <p class="mb-4 fw-bold px-3"> it is an app to show information on the movies and also form 
+                a valid registration by JavaScript</p>
+              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
               <h3 class="text-capitalize fw-bold mb-4">Recipe_Api</h3>
-              <p class="mb-4 fw-bold">Using React - Bootstrap - API - UseHooks</p>
-              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <p class="mb-4 fw-bold px-3"> it is an app to show information on the Food Recipe and also form 
+                a valid registration by JavaScript</p>
+              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
               <h3 class="text-capitalize fw-bold mb-4">Zay</h3>
-              <p class="mb-4 fw-bold">Using React - Scss - Bootstrap</p>
-              <a href="https://mustafa2036.github.io/ZAY/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <p class="mb-4 fw-bold px-3">it is an app to clothes for 4 days by JavaScript with API used (Shop 
+                API)</p>
+              <a href="https://mustafa2036.github.io/ZAY/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
               <h3 class="text-capitalize fw-bold mb-4">BookMarker</h3>
-              <p class="mb-4 fw-bold">Using HTML - Css - js - LocalStorage</p>
-              <a href="https://mustafa2036.github.io/BookMarker/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <p class="mb-4 fw-bold px-3">Using HTML - Css - js - LocalStorage</p>
+              <a href="https://mustafa2036.github.io/BookMarker/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Weather_App</h3>
-              <p class="mb-4 fw-bold">Using HTML - Scss - js</p>
-              <a href="https://mustafa2036.github.io/Weather_app_1/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Cyborg App</h3>
+              <p class="mb-4 fw-bold px-3">it is an app to show information on the Games and also form a 
+                valid registration by JavaScript</p>
+              <a href="https://mustafa2036.github.io/Cyborg/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
               <h3 class="text-capitalize fw-bold mb-4">Shop_Api</h3>
-              <p class="mb-4 fw-bold">Using React - Scss - BootStrap - UseHooks</p>
-              <a href="https://mustafa2036.github.io/shopAPi_2/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <p class="mb-4 fw-bold px-3">it is an app to clothes Shop for 4 days by JavaScript with API 
+                used (Shop API)</p>
+              <a href="https://mustafa2036.github.io/shopAPi_2/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Moviesdb_APi</h3>
-              <p class="mb-4 fw-bold">Using HTML - Css - BootStrap - js - Fetch - Api</p>
-              <a href="https://mustafa2036.github.io/API-Exam/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Davfolio Portfolio:</h3>
+              <p class="mb-4 fw-bold px-3">it is a project as a personal portfolio using HTML, CSS and Bootstrap</p>
+              <a href="https://mustafa2036.github.io/DevFolio_Website/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="work text-center py-5">
-              <h3 class="text-capitalize fw-bold mb-4">Eatery_Cafe</h3>
-              <p class="mb-4 fw-bold">Using HTML - Scss - BootStrap - js</p>
-              <a href="https://mustafa2036.github.io/Cafe_Eatery/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">More Design</a>
+              <h3 class="text-capitalize fw-bold mb-4">Rolex Template</h3>
+              <p class="mb-4 fw-bold px-3">it is a simple template as a Rolex using HTML and Sass and 
+                JavaScript (Responsive 100%</p>
+              <a href="https://mustafa2036.github.io/rolex/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
         </div>
@@ -323,11 +330,32 @@
           <div class="col-lg-6">
             <div class="box-skills">
               <div class="d-flex justify-content-between">
-                <p class="text-uppercase fw-bold">Adobe Xd</p> <p class="fw-bold">50%</p>
+                <p class="text-uppercase fw-bold">Adobe Xd / Figma</p> <p class="fw-bold">70%</p>
               </div>
             </div>
             <div class="progress">
-              <span style="width:0" data-width="50%"></span>
+              <span style="width:0" data-width="70%"></span>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="box-skills">
+              <div class="d-flex justify-content-between">
+                <p class="text-uppercase fw-bold">Npm</p> <p class="fw-bold">65%</p>
+              </div>
+            </div>
+            <div class="progress">
+              <span style="width:0" data-width="65%"></span>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="box-skills">
+              <div class="d-flex justify-content-between">
+                <p class="text-uppercase fw-bold">Plugins (CSS / JS / React) 
+                </p> <p class="fw-bold">70%</p>
+              </div>
+            </div>
+            <div class="progress">
+              <span style="width:0" data-width="70%"></span>
             </div>
           </div>
         </div>
@@ -420,27 +448,12 @@
               <span>01124780896</span>
             </div>
           </div>
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="3000">
-            <input type="text" class="form-control  py-3" placeholder="Name':....">
-          </div>
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="3000">
-            <input type="email" class="form-control  py-3" placeholder="Email':....">
-          </div>
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="3000">
-            <input type="email" class="form-control  py-3" placeholder="Email':....">
-          </div>
-          <div class="col-lg-12" data-aos="fade-up" data-aos-duration="3000">
-            <textarea class="form-control  py-3" placeholder="comment':"></textarea>
-          </div>
-          <div class="col-lg-12 d-flex justify-content-end" data-aos="fade-up" data-aos-duration="3000">
-            <button class="btn btn-success fw-bold text-uppercase px-5 py-3">Send Message</button>
-          </div>
         </div>
       </div>
     </section>
     <!-- End Contact -->
     <!-- Start Footer -->
-    <footer class="py-4">
+    <footer class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-sm-6">
