--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <h3 class="text-capitalize fw-bold mb-4">Movies_Api</h3>
               <p class="mb-4 fw-bold px-3"> it is an app to show information on the movies and also form 
                 a valid registration by JavaScript</p>
-              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
+              <a href="https://mustafa2036.github.io/MoviesAPi/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
@@ -196,7 +196,7 @@
               <h3 class="text-capitalize fw-bold mb-4">Recipe_Api</h3>
               <p class="mb-4 fw-bold px-3"> it is an app to show information on the Food Recipe and also form 
                 a valid registration by JavaScript</p>
-              <a href="#" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
+              <a href="https://mustafa2036.github.io/Recipe/" target="_blank" class="btn text-capitalize py-2 px-4 fw-bold">View Template</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="3000">
