--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <a href="https://github.com/mustafa2036" target="_blank" class="btn btn-warning fw-bold px-lg-4 px-sm-3 py-3 text-uppercase">view GitHub</a>
                   <a href="https://www.linkedin.com/in/mostafa-misse-a35199225/" target="_blank" class="btn btn-info ms-4 fw-bold px-lg-4 px-sm-3 py-3 text-uppercase">view linkedin</a>
                 </div>
-                <div class="icons mt-5"></div>
+                <a href="#about" class="icons mt-5"></a>
               </div>
             <div class="arrow-up">
               <a href="#home"> <i class="fas fa-arrow-up"></i> </a>
@@ -101,13 +101,14 @@
               <span> FrontEnd Developer / UI Developer</span>
             </div>
             <div class="about-content">
-              <p class="text-capitalize">I am FrontEnd Developer, It is a long time fact that a reader will be distracted by 
-                that readable content of a page when looking at its layout the point of using Lorem, 
-                ipsum dolor sit amet consectetur adipisicing elit.
+              <p class="text-capitalize">A Frontend Developer at and looking for a full-time / part-time position in the field of 
+                Frontend developer where I can apply my knowledge and skills for continuous 
+                improvement and find an opportunity to capitalize on my skills, technical abilities and 
+                learn new technologies. Work Experience
               </p>
-              <p class="text-capitalize">it is a fact that a reader will be distracted by the readable content of page 
-                when looking at its layout the point of using Lorem, 
-                ipsum dolor sit amet consectetur adipisicing elit.
+              <p class="text-capitalize">Presentation Skills 
+                Leadership - Self-Learning - Time Management - Ability to work independently or as 
+                part of a team - Work under pressure
               </p>
             </div>
             <div class="about-user">
@@ -131,7 +132,6 @@
         </div>
       </div>
     </section>
-    <div id="particles-js"></div>
     <!-- End About -->
     <!-- Start Clinet -->
     <section class="py-2 clinet">
