--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="my-3 text-uppercase">Hi There</p>
                 <h2 class="my-4 text-uppercase">I'm Mostafa Ramadan</h2>
                 <h3 class="my-3 text-uppercase">
-                    <span class="element"></span>
+                    <span id="element"></span>
                 </h3>
                 <div class="m-auto w-100 mt-5">
                   <a href="https://github.com/mustafa2036" target="_blank" class="btn btn-warning fw-bold px-lg-4 px-sm-3 py-3 text-uppercase">view GitHub</a>
@@ -502,7 +502,7 @@
     </section>
     <!-- Custom File Bootstrap js -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Custom File script -->
